--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     body {
       font-family: 'Segoe UI', sans-serif;
       padding: 30px;
-      background-color: #ff00000;
+      background-color: #1D6D8C;
     }
     h1 {
       text-align: center;
