Update index.html fonts changed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>World Explorer</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: 'Arial Black', gadget;
       padding: 30px;
       background-color: #1D6D8C;
     }
