--- a/index.html
+++ b/index.html
@@ -119,12 +119,5 @@
 
   </script>
 
-<!-- Image at the bottom of the page -->
-<div style="text-align: center; margin-top: 40px;">
-  <img src="Screenshot_2025-05-11-22-49-29-196_com.android.thememanager-edit.jpg" 
-       alt="Bottom Image" 
-       style="width: 100%; max-width: 600px; opacity: 0.9; border-radius: 10px;" />
+<height: auto; max-width: 100%; opacity: 0.9; border-radius: 10px;" />
 </div>
-
-</body>
-</html>
